update dependency listing

--- a/README.org
+++ b/README.org
@@ -18,7 +18,7 @@
 * Instalation
 
   Until p-search is available on ELPA/MELPA, you will have to install
-  this package manually.
+  this package manually.  The only dependency of p-search is [[https://elpa.gnu.org/devel/heap.html][heap]].
 
   Using Quelpa:
 #+begin_src lisp
