--- a/README.org
+++ b/README.org
@@ -206,10 +206,32 @@
 ** Extensions
 
    p-search was designed to be extensible, both in what you can search
-   on and how the search is performed.  Add `(require 'psx-info')` to
+   on and how the search is performed.  Add =(require 'psx-info)= to
    load a p-search extension whilch lets you search on info files.
 
    [[./documents/psx-info-demo.gif]]
 
    This package adds a new candidate generator for info files.  The
    above example shows a search with two different info files.
+
+   p-search is meant to be more like a search-engine creator, rather
+   than a search-engine for for a specifc use case.  Suppose you found
+   yourself searching the Emacs documentation often and you wanted to
+   create a search command for this.  Doing so with p-search is easy.
+
+#+begin_src lisp
+  (defun my/search-emacs (search-query)
+    (interactive "sSearchs Term: ")
+    (p-search-setup-buffer
+     `(:group ((:prior-template p-search-prior-query
+                                :args ((query-string . ,search-query) (importance . medium)))
+               (:candidate-generator psx-info-candidate-generator :args ((info-node . emacs)))
+               (:candidate-generator psx-info-candidate-generator :args ((info-node . elisp)))))))
+#+end_src
+
+   The above command will search both the emacs and elisp info
+   manuals.  If you're trying to create a search command yourself and
+   are not sure what you should pass into the =p-search-setup-buffer=,
+   you can run the command =p-search-show-session-preset= on a
+   p-search buffer with your desired setup to see the data
+   representation of the search.
